# information-tracking-agent

./: .env.example  .gitignore  README.md  README_EN.md  pyproject.toml
config/: config.example.yaml  shadow-run-url-candidates.example.yaml  sources.yaml
docs/: CONFIGURATION.md  MIGRATION_COMPLETE.md  RSS_FETCH_ARCHITECTURE_ANALYSIS.md  SEARCH_CAPABILITIES.md  V2_TO_V3_MIGRATION_PLAN.md  V3_24X7_ST_SOP.md  V3_AUTORUN_OPERATIONS.md  V3_PRODUCT_DIRECTION.md  architecture.md  error-architecture.md
prompts/: primary_market_extraction.md  registry.json  telegram_brief.md
prompts/versions/primary_market_v1/: scoring.md
prompts/versions/rimbo_source_scored_v3/: extraction.md  scoring.md
prompts/versions/v2_legacy/: extraction.md  scoring.md
prompts/versions/v2_stable_cn/: extraction.md  scoring.md
scripts/: control.sh  install_crontab.sh  monitor_completion.py  nightly_job.sh  reset_failed_tasks.py  run-v3.sh  run.sh  setup_agent_reach.sh  test_fetchers.py  test_preprocess.py  test_rss_fetch.py  test_url.py  v2_compare.py
scripts/utils/: long_content_preprocessor.py
src/knowledge_extractor_v3/: __init__.py  config_loader.py  health.py  live_gate.py  models.py  pipeline.py  prompt_parser.py  prompt_registry.py  queue_store.py  runtime_guard.py  scheduler.py  shadow_runner.py  telegram_bot.py  worker.py
src/knowledge_extractor_v3/daily_reports/: __init__.py  renderer.py  runner.py  system_files.py  watchlist.py  weekly_output.py
src/knowledge_extractor_v3/fetchers/: __init__.py  base.py  fixture.py  http_client.py  multi_channel.py  router.py  rss_channel.py  (+3 more)
tests/: test_config_loader.py  test_control_scripts.py  test_daily_report_config.py  test_daily_report_renderer.py  test_daily_report_runner.py  test_daily_report_system_files.py  test_daily_report_watchlist.py  test_entry_isolation.py  test_fetcher_router.py  test_fixture_fetcher.py  test_health.py  test_live_gate.py  test_live_llm_provider.py  test_live_output_port.py  test_llm_provider_stub.py  test_multi_channel.py  test_pipeline_dry_run.py  test_pipeline_staging_outputs.py  test_prompt_contract.py  test_prompt_parser.py  test_prompt_registry.py  test_queue_store_contract.py  test_runtime_guard.py  test_shadow_runner.py  test_source_registry.py  test_telegram_bot.py  test_web_fetcher.py  test_weekly_output_router.py  test_worker.py
(+23 files in other folders)
