[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "information-tracking-agent"
version = "0.1.0"
description = "Multi-platform knowledge extraction agent with LLM scoring — YouTube, Twitter/X, RSS, web search → Obsidian + Telegram"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [{ name = "bor799" }]
keywords = ["knowledge-extraction", "llm", "obsidian", "telegram", "rss", "web-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/bor799/information-tracking-agent"
Repository = "https://github.com/bor799/information-tracking-agent"
Issues = "https://github.com/bor799/information-tracking-agent/issues"

[project.optional-dependencies]
search = [
    # Optional: for direct Exa API usage (MCP mode works without this)
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
information-tracking-agent = "knowledge_extractor_v3.shadow_runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
