[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "100x-knowledge-extractor-v3"
version = "0.1.0"
description = "100X Knowledge Extractor V3 for primary-market intelligence briefs"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
search = [
    # Optional: for direct Exa API usage (MCP mode works without this)
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
100x-v3-shadow-run = "knowledge_extractor_v3.shadow_runner:main"
100x-v3-us-ai-daily = "knowledge_extractor_v3.daily_reports.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
